--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-<link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
-<link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
-<link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
-<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-<link rel="stylesheet" type="text/css" href="resources/css/queries.css">
+<link rel="stylesheet" type="text/css" href="css/normalize.css">
+<link rel="stylesheet" type="text/css" href="css/grid.css">
+<link rel="stylesheet" type="text/css" href="css/ionicons.min.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/queries.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400" rel="stylesheet">
 	<title>Omnifood</title>
 </head>
@@ -15,7 +15,7 @@
 		<nav>
 			<div class="row">
 				
-				<img src="resources/img/logo-white.png" alt="Omnifood logo" class="logo">
+				<img src="img/logo-white.png" alt="Omnifood logo" class="logo">
 				
 				<ul class="main-nav">
 					<li><a href="#">Food Delivery</a></li>
@@ -77,44 +77,44 @@
 	<ul class="meals-showcase clearfix">
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/1.jpg" alt="Korean bibimap with vegetables">
+				<img src="img/1.jpg" alt="Korean bibimap with vegetables">
 			</figure>
 		</li>
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+				<img src="img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
 			</figure>
 		</li>
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
+				<img src="img/3.jpg" alt="Chicken breast steak with vegetables">
 			</figure>
 		</li>
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
+				<img src="img/4.jpg" alt="Autumn pumpkin soup">
 			</figure>
 		</li>
 	</ul>
 	<ul class="meals-showcase clearfix">
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
+				<img src="img/5.jpg" alt="Paleo beef steak with vegetables">
 			</figure>
 		</li>
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+				<img src="img/6.jpg" alt="Healthy baguette with egg and vegetables">
 			</figure>
 		</li>
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
+				<img src="img/7.jpg" alt="Burger with cheddar and bacon">
 			</figure>
 		</li>
 		<li>
 			<figure class="meal-photo">
-				<img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
+				<img src="img/8.jpg" alt="Granola with cherries and strawberries">
 			</figure>
 		</li>
 	</ul>
@@ -127,7 +127,7 @@
 
 	<div class="row">
 		<div class="col span-1-of-2 steps-box">
-			<img src="resources/img/app-iphone.png" alt="Omnifood App On iphone" class="app-screen">
+			<img src="img/app-iphone.png" alt="Omnifood App On iphone" class="app-screen">
 		</div>
 
 		<div class="col-span-1-of-2 steps-box">
@@ -146,8 +146,8 @@
 				<div>3</div>
 				<p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
 			</div>
-			<a href="#" class="btn-app"><img src="resources/img/download-app-itune.png" alt="App Store Button"></a>
-			<a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play Store Button"></a>
+			<a href="#" class="btn-app"><img src="img/download-app-itune.png" alt="App Store Button"></a>
+			<a href="#" class="btn-app"><img src="img/download-app-android.png" alt="Play Store Button"></a>
 		</div>
 	</div>
 </section>
@@ -158,7 +158,7 @@
 	</div>
 	<div class="row">
 		<div class="col span-1-of-4 box">
-			<img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+			<img src="img/lisbon-3.jpg" alt="Lisbon">
 			<h3>Lisbon</h3>
 			<div class="city-feature">
 				<i class="ion-ios-person icon-small"></i>
@@ -177,7 +177,7 @@
 		</div>
 
 		<div class="col span-1-of-4 box">
-			<img src="resources/img/San-francisco.jpg" alt="San Francisco">
+			<img src="img/San-francisco.jpg" alt="San Francisco">
 			<h3>San Francisco</h3>
 			<div class="city-feature">
 				<i class="ion-ios-person icon-small"></i>
@@ -196,7 +196,7 @@
 		</div>
 
 		<div class="col span-1-of-4 box">
-			<img src="resources/img/Berlin.jpg" alt="Berlin">
+			<img src="img/Berlin.jpg" alt="Berlin">
 			<h3>Berlin</h3>
 			<div class="city-feature">
 				<i class="ion-ios-person icon-small"></i>
@@ -215,7 +215,7 @@
 		</div>
 
 		<div class="col span-1-of-4 box">
-			<img src="resources/img/London.jpg" alt="London">
+			<img src="img/London.jpg" alt="London">
 			<h3>London</h3>
 			<div class="city-feature">
 				<i class="ion-ios-person icon-small"></i>
@@ -246,14 +246,14 @@
 		<div class="col span-1-of-3">
 			<blockquote>
 				Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
-				<cite><img src="resources/img/customer-1.jpg">Alberto Duncan</cite>
+				<cite><img src="img/customer-1.jpg">Alberto Duncan</cite>
 			</blockquote>
 		</div>
 
 		<div class="col span-1-of-3">
 			<blockquote>
 				Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
-				<cite><img src="resources/img/customer-2.jpg">Joana Silva</cite>
+				<cite><img src="img/customer-2.jpg">Joana Silva</cite>
 			</blockquote>
 		</div>
 
@@ -261,7 +261,7 @@
 			<blockquote>
 				I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
 
-				<cite><img src="resources/img/customer-3.jpg">Milton Chapman</cite>
+				<cite><img src="img/customer-3.jpg">Milton Chapman</cite>
 			</blockquote>
 		</div>
 
