--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 	<div class="row">
 		<div class="col span-1-of-2 steps-box">
-			<img src="img/app-iphone.png" alt="Omnifood App On iphone" class="app-screen">
+			<img src="img/app-iPhone.png" alt="Omnifood App On iphone" class="app-screen">
 		</div>
 
 		<div class="col-span-1-of-2 steps-box">
