--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		</div>
 
 		<div class="col span-1-of-4 box">
-			<img src="img/San-francisco.jpg" alt="San Francisco">
+			<img src="img/san-francisco.jpg" alt="San Francisco">
 			<h3>San Francisco</h3>
 			<div class="city-feature">
 				<i class="ion-ios-person icon-small"></i>
@@ -195,7 +195,7 @@
 		</div>
 
 		<div class="col span-1-of-4 box">
-			<img src="img/Berlin.jpg" alt="Berlin">
+			<img src="img/berlin.jpg" alt="Berlin">
 			<h3>Berlin</h3>
 			<div class="city-feature">
 				<i class="ion-ios-person icon-small"></i>
@@ -214,7 +214,7 @@
 		</div>
 
 		<div class="col span-1-of-4 box">
-			<img src="img/London.jpg" alt="London">
+			<img src="img/london.jpg" alt="London">
 			<h3>London</h3>
 			<div class="city-feature">
 				<i class="ion-ios-person icon-small"></i>
