--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
 	</ul>
 </section>
 
+<!--====================-->
+<!---Meal image Listing End-->
+<!--====================-->
+
+<!--====================-->
+<!---Available Cities-->
+<!--====================-->
+
 <section class="section-steps">
 	<div class="row">
 		<h2>How it works &mdash; Simple as 1, 2, 3</h2>
@@ -237,6 +245,14 @@
 	
 </section>
 
+<!--====================-->
+<!---Available Cities Ends Here-->
+<!--====================-->
+
+<!--====================-->
+<!---Customer Testimonies-->
+<!--====================-->
+
 <section class="section-testimonials">
 	<div class="row">
 		<h2>Our customers can't live without us</h2>
@@ -263,10 +279,18 @@
 				<cite><img src="img/customer-3.jpg">Milton Chapman</cite>
 			</blockquote>
 		</div>
-
-
 	</div>
 </section>
+
+
+<!--====================-->
+<!---Customer Testimonies Ends here-->
+<!--====================-->
+
+
+<!--====================-->
+<!---Subscription Plan-->
+<!--====================-->
 
 <section class="section-plans">
 	<div class="row">
@@ -337,7 +361,13 @@
 		</div>
 	</div>
 </section>
+<!--====================-->
+<!---Subscription Plan Ends Here-->
+<!--====================-->
 
+<!--====================-->
+<!---Contact Form-->
+<!--====================-->
 <section class="section-form">
 	<div class="row">
 		<h2>We're happy to hear from you</h2>
@@ -402,7 +432,13 @@
 		</form>
 	</div>
 </section>
+<!--====================-->
+<!---Contact Form ends-->
+<!--====================-->
 
+<!--====================-->
+<!---Footer-->
+<!--====================-->
 <footer>
 	<div class="row">
 		<div class="col span-1-of-2">
