--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
 					</select>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="col span-1-of-3">
 					<label for="news">Newsletter?</label>
@@ -462,6 +463,9 @@
 	<div class="row">
 		<p>
 			Copyright &copy; 2018 by Omnifood. All rights reserved.
+		</p>
+		<p>
+			<a href="https://github.com/peterito"></a>Design by Ptech.</a>
 		</p>
 	</div>
 </footer>
