--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 			Copyright &copy; 2018 by Omnifood. All rights reserved.
 		</p>
 		<p>
-			<a href="https://github.com/peterito"></a>Design by Ptech.</a>
+			<a href="https://github.com/peterito">Design by Ptech.</a>
 		</p>
 	</div>
 </footer>
