--- a/index.html
+++ b/index.html
@@ -464,9 +464,7 @@
 		<p>
 			Copyright &copy; 2018 by Omnifood. All rights reserved.
 		</p>
-		<p>
-			<a href="https://github.com/peterito">Design by Ptech.</a>
-		</p>
+		<p><a href="https://github.com/peterito">Design by Ptech.</a></p>
 	</div>
 </footer>
 
