--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@
 		</div>
 		<div class="col-span-1-of-2">
 			<ul class="social-icons">
-				<li><a href="https://github.com/peterito" target="_blank"><i class="ion-social-facebook"></i></a></li>
-				<li><a href="https://github.com/peterito" target="_blank"><i class="ion-social-twitter"></i></a></li>
-				<li><a href="https://github.com/peterito" target="_blank"><i class="ion-social-googleplus"></i></a></li>
-				<li><a href="https://github.com/peterito" target="_blank"><i class="ion-social-instagram"></i></a></li>
+				<li><a href="#"><i class="ion-social-facebook"></i></a></li>
+				<li><a href="#"><i class="ion-social-twitter"></i></a></li>
+				<li><a href="#"><i class="ion-social-googleplus"></i></a></li>
+				<li><a href="#"><i class="ion-social-instagram"></i></a></li>
 			</ul>
 		</div>
 	</div>
