--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 		<p>
 			Copyright &copy; 2018 by Omnifood. All rights reserved.
 		</p>
-		<p class="footlink"><a href="https://github.com/peterito" target="_blank">Design by Ptech.</a></p>
+		<p class="git"><a href="https://github.com/peterito" target="_blank">Design by Ptech.</a></p>
 	</div>
 </footer>
 
